--- a/blog.html
+++ b/blog.html
@@ -185,6 +185,35 @@
 
   </header>
 <!-- ======= /Header ======= -->
+<!-- show place -->
+<section class="First-sec-on-main-show-place">
+    <div class="ahmed-container">
+      <div class="div-show-place-in-wepsite padding-top-10">
+          <a href="#">
+              <span>-Home </span> 
+              <span class="pl-1">
+                <i class="fas fa-hand-point-right"></i>
+              </span>
+          </a>
+          <!-- <a href="#" class="pl-3">
+              <span>-All Courses </span> 
+              <span class="pl-1">
+                <i class="fas fa-hand-point-right"></i>
+              </span>
+          </a>
+          <a href="#" class="pl-3">
+              <span >-General </span> 
+              <span class="pl-1">
+                <i class="fas fa-hand-point-right"></i>
+              </span>
+          </a> -->
+          <a  class="n-hover pl-3">
+              <span >-Blog</span>
+          </a>
+          <hr>
+        </div> <!-- /end div show place -->
+      </div> <!-- /end container -->
+  </section> <!-- /end first sec in main -->
 
 
 
