--- a/index.html
+++ b/index.html
@@ -123,10 +123,25 @@
         <div class="ahmed-container">
         <nav class="navbar navbar-expand-lg navbar-light ">
           <a class="navbar-brand mr-owner" href="#"><img src="images/logo.webp" alt=""></a>
-          <button class="navbar-toggler" type="button" >
+          <button class="navbar-toggler" type="button" id="navlinkmop">
             <span class="navbar-toggler-icon"></span>
           </button>
-        
+          <button class="navbar-toggler returnback" type="button" >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="moplinksleft">
+            <ul>
+              <li>DEMOS</li>
+              <li>COURSES</li>
+              <li>FEATURES</li>
+              <li>EVENTS</li>
+              <li>Gallery</li>
+              <li>Blog</li>
+              <li>Shop</li>
+            </ul>
+          </div>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item dropdown mr-2">
@@ -136,7 +151,7 @@
               </li>
               <li class="nav-item dropdown mr-2">
                 <a class="nav-link dropdown-toggle col-whi">
-                  COURSES
+                  COURSES                
                 </a>
               </li>
               <li class="nav-item dropdown mr-2">
